# glTutorial

./: .gitmodules  CMakeLists.txt  README.md  new.frag  tutorial_01  tutorial_02
01/src/: main.c
02/include/: shader.h  util.h  vert.h
02/res/: main.frag  main.vert
02/src/: main.c  shader.c  util.c  vert.c
02_single_file/include/: shader.h
02_single_file/res/: main.frag
02_single_file/src/: main.c  shader.c  util.c  vert.c
